Ensure to set highlight on reload when file type was set by user

This change do essentially nothing else than before, we only call
updateFileType(..) direct and not by setMode() which allows bypassing
the blocking in updateFileType(..)

BUG:454715